--- a/testsrc/lib/chopchop-tests.html
+++ b/testsrc/lib/chopchop-tests.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Pyr Tests</title>
+    <title>chop chop tests</title>
 
-    <meta name="viewport" content="width=device-width, user-scalable=no"/>
-    <meta name="HandheldFriendly" content="true"/>
-
+    <link rel="stylesheet" href="../qunit/qunit.css"/>
+    <script src="../qunit/qunit.js"></script>
     <script src="../require/require.js"></script>
+
 
     <style type='text/css'>
 
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-<div id="map"></div>
+<div id="qunit"></div>
 
 <script>
 
@@ -38,109 +38,12 @@
         }
     });
 
+    QUnit.config.autostart = false;
     require([
-        'lib/Context2d',
-        'lib/RenderLoop',
-        'lib/OSMPyramid',
-        'lib/Promise',
-        'lib/Line',
-        'lib/Polygon',
-        'lib/Map',
-        'lib/RTree',
-        'lib/Box2d',
-        'lib/Layer'
-    ], function (Context2d, RenderLoop, OSMPyramid, Promise, Line, Polygon, Map, RTree, Bbox2d, Layer) {
-
-
-        function liner(points) {
-            return {
-                forEachXY: function (cb) {
-                    points.forEach(function (p) {
-                        cb(p[0], p[1]);
-                    })
-                }
-            };
-        }
-
-        TestPyr = OSMPyramid
-                .molt()
-                .construct(function () {
-                    this.drawableForTile = function (level, col, row) {
-                        var cnt = new Context2d()
-                                .size(256, 256)
-                                .drawText([level, col, row].join(','), 100, 100)
-                                .strokeRect(0, 0, 256, 256);
-                        return cnt;
-                    };
-                })
-                .make();
-
-        osm = new OSMPyramid();
-//        osm = new TestPyr();
-
-
-        var line = liner([
-            [0, 0],
-            [10, 100],
-            [120, 2],
-            [7, 80]
-        ]);
-
-        var ln = new Line(line);
-
-        map = new Map('map');
-        map.add(osm);
-//        map.add(ln);
-//        map.add(new Polygon(liner([
-//            [200, 40],
-//            [230, 70],
-//            [80, 10]
-//        ])));
-
-
-        lyr = new Layer([
-
-        ], function () {
-
-        });
-
-        rtree = new RTree();
-
-        env1 = new Bbox2d().lbrt(0, 0, 100, 100);
-        env2 = new Bbox2d().lbrt(80, 80, 100, 100);
-        env3 = new Bbox2d().lbrt(90, 90, 120, 160);
-        env4 = new Bbox2d().lbrt(10, 60, 20, 50);
-//
-//        rtree = rtree.insert(1, env1);
-//        rtree = rtree.insert(2, env2);
-//        rtree = rtree.insert(3, env3);
-//        rtree = rtree.insert(4, env4);
-
-
-//        env5 = new Bbox2d().lbrt(90, 12, 91, 123);
-//        rtree = rtree.insert(5, env5);
-
-        Box = Bbox2d;
-        function addRandom() {
-
-            function random(x) {
-                return Math.round(Math.random() * x);
-            }
-
-            var a = random(1000);
-            var b = random(500);
-            env = new Bbox2d().lbrt(a, b, a + random(80), b + random(80));
-
-            rtree.add(env);
-
-            map._context.clear();
-            rtree.draw(map._context);
-
-        }
-
-        globr = addRandom;
-
-
+        'testlib/Promise-test',
+        'testlib/IterableMixin-test'
+    ], function (Promise) {
+        QUnit.start();
     });
 
 
