add animationFrame polyfill and tests

--- a/testsrc/lib/chopchop-tests.html
+++ b/testsrc/lib/chopchop-tests.html
@@ -41,7 +41,8 @@
     QUnit.config.autostart = false;
     require([
         'testlib/Promise-test',
-        'testlib/IterableMixin-test'
+        'testlib/IterableMixin-test',
+        'testlib/animationFrame-test'
     ], function (Promise) {
         QUnit.start();
     });
