add map reduce to src/lib; renove from dev

--- a/testsrc/lib/chopchop-tests.html
+++ b/testsrc/lib/chopchop-tests.html
@@ -42,8 +42,9 @@
     require([
         'testlib/Promise-test',
         'testlib/IterableMixin-test',
-        'testlib/animationFrame-test'
-    ], function (Promise) {
+        'testlib/animationFrame-test',
+        'testlib/MapReduce-test'
+    ], function () {
         QUnit.start();
     });
 
